// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<div
  className="App"
>
  <Header />
  <section
    className="categories-section"
  />
  <section
    className="storage-section"
  />
</div>
`;

exports[`App should match snapshot when it is ready to compileStorage 1`] = `
<div
  className="App"
>
  <Header />
  <section
    className="categories-section"
  />
  <section
    className="storage-section"
  >
    <Category
      collectMissedQuestions={[Function]}
      storage={Array []}
    />
  </section>
</div>
`;
